Bug 13142 - kernel-panic if the process.max_cstate=0 is added
Summary: kernel-panic if the process.max_cstate=0 is added
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Processor (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: ykzhao
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-21 03:26 UTC by ykzhao
Modified: 2009-04-30 05:59 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.28/2.6.29
Subsystem:
Regression: No
Bisected commit-id:


Attachments
the kernel-panic log on 2.6.28.3 kernel (167.22 KB, text/plain)
2009-04-21 03:27 UTC, ykzhao
Details
[patch]: Add the module param check for processor.max_cstate (1.92 KB, patch)
2009-04-24 02:22 UTC, ykzhao
Details | Diff
patch vs 2.6.30-rc3 (1.02 KB, patch)
2009-04-24 03:30 UTC, Len Brown
Details | Diff

Description ykzhao 2009-04-21 03:26:35 UTC
The box can't be booted if the processor is compiled as builtin-kernel and the boot option of "processor.max_cstate=0" is added.
Comment 1 ykzhao 2009-04-21 03:27:28 UTC
Created attachment 21063 [details]
the kernel-panic log on 2.6.28.3 kernel
Comment 2 ykzhao 2009-04-21 03:28:52 UTC
If there is no boot option of "processor.max_cstate" or the max_cstate is not zero, the box can be booted correctly.
Comment 3 ykzhao 2009-04-24 02:22:35 UTC
Created attachment 21098 [details]
[patch]: Add the module param check for processor.max_cstate

Add the module param check for the processor.max_cstate.

If the module param is equal to or less than zero, it will be ignored. When it is beyond the threshold, it is also ignored.

thanks.
Comment 4 Len Brown 2009-04-24 03:30:49 UTC
Created attachment 21099 [details]
patch vs 2.6.30-rc3

i thinkt the previous patch was overkill
because processor.max_cstate can be set only at init-time,
not at run-time.  so this 3-liner should be sufficient.
Comment 5 Len Brown 2009-04-30 05:59:21 UTC
shipping in 2.6.30-rc4

closed.

Note You need to log in before you can comment on or make changes to this bug.